# github-activity

./: .gitignore  README.md  dune-project  github_user_activity.opam
lib/: AggregatedData.ml  UserActivity.ml  activity.ml  dune
test/: dune
